--- a/humble-bundle.html
+++ b/humble-bundle.html
@@ -48,21 +48,23 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
+          <li><a href="resume.html">Resume</a></li>
           <li><a href="index.html">Projects</a></li>
           <li><a href="photos.html">Photography</a></li>
-          <li><a href="resume.html">Resume</a></li>
-          <li>
-            <label class="theme-switch">
-              <input type="checkbox" id="theme-toggle" />
-              <span class="slider"></span>
-            </label>
-          </li>
         </ul>
       </nav>
+      <label class="theme-switch">
+        <input type="checkbox" id="theme-toggle" />
+        <span class="slider"></span>
+      </label>
     </header>
     <main>
       <h1>
-        <a href="https://www.figma.com/community/file/1564470659771037730/humble-bundle-redesign" target="_blank">Humble Bundle Redesign</a>
+        <a
+          href="https://www.figma.com/community/file/1564470659771037730/humble-bundle-redesign"
+          target="_blank"
+          >Humble Bundle Redesign</a
+        >
       </h1>
       <div class="login-image">
         <picture>
@@ -84,7 +86,9 @@
       <div class="link-boxes">
         <div id="link-box2">
           <div class="website">
-            <a href="https://www.figma.com/community/file/1564470659771037730/humble-bundle-redesign" target="_blank"
+            <a
+              href="https://www.figma.com/community/file/1564470659771037730/humble-bundle-redesign"
+              target="_blank"
               >View the design on Figma!</a
             >
           </div>
@@ -96,13 +100,28 @@
           <div class="description">
             <ul>
               <li>
-                Humble Bundle's website faced significant usability challenges that were hindering the user experience. The cluttered navigation, inconsistent filtering system, and disruptive promotional banner created visual overload and made it difficult for users to find and purchase digital content effectively.
+                Humble Bundle's website faced significant usability challenges
+                that were hindering the user experience. The cluttered
+                navigation, inconsistent filtering system, and disruptive
+                promotional banner created visual overload and made it difficult
+                for users to find and purchase digital content effectively.
               </li>
               <li>
-                I redesigned the website to address these pain points through comprehensive user research and strategic design improvements. My approach included conducting card sorting exercises with three participants to understand how users naturally organize information, followed by applying established UX heuristics to create a more intuitive site structure.
+                I redesigned the website to address these pain points through
+                comprehensive user research and strategic design improvements.
+                My approach included conducting card sorting exercises with
+                three participants to understand how users naturally organize
+                information, followed by applying established UX heuristics to
+                create a more intuitive site structure.
               </li>
               <li>
-                The redesign resulted in a significantly cleaner and more user-friendly experience that reduced cognitive load while maintaining Humble Bundle's charitable mission and visual appeal. The new design improved content discoverability, streamlined the shopping process, and created a more cohesive experience for the platform's tech-savvy customer base who value both digital content and charitable giving.
+                The redesign resulted in a significantly cleaner and more
+                user-friendly experience that reduced cognitive load while
+                maintaining Humble Bundle's charitable mission and visual
+                appeal. The new design improved content discoverability,
+                streamlined the shopping process, and created a more cohesive
+                experience for the platform's tech-savvy customer base who value
+                both digital content and charitable giving.
               </li>
             </ul>
           </div>
@@ -112,19 +131,29 @@
           <div class="description">
             <ul>
               <li>
-                <strong>User Testing:</strong> Conducted card sorting exercises with three users to understand navigation preferences, revealing insights from minimalist to detailed organizational approaches.
+                <strong>User Testing:</strong> Conducted card sorting exercises
+                with three users to understand navigation preferences, revealing
+                insights from minimalist to detailed organizational approaches.
               </li>
               <li>
-                <strong>Heuristic Evaluation:</strong> Applied Nielsen's usability principles to identify key issues including redundant promotional elements and inconsistent visual hierarchy.
+                <strong>Heuristic Evaluation:</strong> Applied Nielsen's
+                usability principles to identify key issues including redundant
+                promotional elements and inconsistent visual hierarchy.
               </li>
               <li>
-                <strong>Information Architecture:</strong> Redesigned site structure balancing simplicity with depth, incorporating user feedback to create intuitive navigation paths.
+                <strong>Information Architecture:</strong> Redesigned site
+                structure balancing simplicity with depth, incorporating user
+                feedback to create intuitive navigation paths.
               </li>
               <li>
-                <strong>Visual Design:</strong> Maintained Humble Bundle's clean aesthetic while improving contrast, spacing, and content organization to reduce visual clutter.
+                <strong>Visual Design:</strong> Maintained Humble Bundle's clean
+                aesthetic while improving contrast, spacing, and content
+                organization to reduce visual clutter.
               </li>
               <li>
-                <strong>Responsive Design:</strong> Ensured consistent experience across devices with improved mobile navigation and touch-friendly interface elements.
+                <strong>Responsive Design:</strong> Ensured consistent
+                experience across devices with improved mobile navigation and
+                touch-friendly interface elements.
               </li>
             </ul>
           </div>
@@ -134,19 +163,29 @@
           <div class="description">
             <ul>
               <li>
-                <strong>Streamlined Navigation:</strong> Removed redundant promotional banner and reorganized menu structure based on user card sorting results.
+                <strong>Streamlined Navigation:</strong> Removed redundant
+                promotional banner and reorganized menu structure based on user
+                card sorting results.
               </li>
               <li>
-                <strong>Enhanced Store Layout:</strong> Redesigned cluttered store page with consistent filtering options and improved content presentation to highlight key elements.
+                <strong>Enhanced Store Layout:</strong> Redesigned cluttered
+                store page with consistent filtering options and improved
+                content presentation to highlight key elements.
               </li>
               <li>
-                <strong>Improved Visual Hierarchy:</strong> Applied consistent color scheme and spacing to reduce cognitive load and make colorful bundle covers stand out effectively.
+                <strong>Improved Visual Hierarchy:</strong> Applied consistent
+                color scheme and spacing to reduce cognitive load and make
+                colorful bundle covers stand out effectively.
               </li>
               <li>
-                <strong>Optimized Filtering:</strong> Implemented unified filter system across all pages, allowing users to sort by popularity, content type, and release status seamlessly.
+                <strong>Optimized Filtering:</strong> Implemented unified filter
+                system across all pages, allowing users to sort by popularity,
+                content type, and release status seamlessly.
               </li>
               <li>
-                <strong>Accessibility Focus:</strong> Enhanced contrast ratios, improved keyboard navigation, and ensured screen reader compatibility throughout the redesign.
+                <strong>Accessibility Focus:</strong> Enhanced contrast ratios,
+                improved keyboard navigation, and ensured screen reader
+                compatibility throughout the redesign.
               </li>
             </ul>
           </div>
