fix link for fsae

--- a/index.html
+++ b/index.html
@@ -127,10 +127,7 @@
               />
             </picture>
           </a>
-          <a
-            href="https://www.figma.com/design/odTDbvIB13dxQiV7OsLK2Y/SAE?node-id=0-1&t=DQmo6AsRvrwDJrNN-1"
-            class="link-box"
-          >
+          <a href="https://orgs.coe.drexel.edu/formulaev/" class="link-box">
             <span class="above-text">Wordpress, Figma</span>
             <div class="box-title">
               Redesign of Drexel Electric Racing's Website
